<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stationOwner.DieselArrival">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/top">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#00FFFFFF"
                android:contentDescription="TODO"
                android:minHeight="48dp"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/queue"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="#FFFFFF"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:hint="@string/id"
                            android:textColorHint="#403C3C"
                            android:textSize="15sp" />

                        <Spinner
                            android:id="@+id/spinner1"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="27dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/fund_border_blue"
                            android:textColor="#686161"
                            android:textColorHint="#686161"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:hint="@string/nic"
                            android:textColorHint="#403C3C"
                            android:textSize="15sp" />

                        <Spinner
                            android:id="@+id/spinner2"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="27dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/fund_border_blue"
                            android:textColor="#686161"
                            android:textColorHint="#686161"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="5dp"
                            android:hint="@string/shed_name"
                            android:textColorHint="#403C3C"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/account_number"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="27dp"
                            android:layout_marginRight="5dp"
                            android:autofillHints=""
                            android:background="@drawable/fund_border_blue"
                            android:inputType="text"
                            android:padding="10dp"
                            android:textColor="#686161"
                            android:textColorHint="#686161"
                            android:textSize="14sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginBottom="12dp"
                        android:layout_marginTop="120dp">

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="65dp"
                            android:layout_marginEnd="12dp"
                            android:layout_marginBottom="30dp"
                            android:background="@drawable/fund_submit_button"
                            android:text="@string/create"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>