<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@drawable/top">

            <ImageButton
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#00FFFFFF"
                android:contentDescription="TODO"
                android:minHeight="48dp"
                android:onClick="backToList"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="160dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/queue"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/fund_background_box">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/queue_count"
                            android:textColorHint="#403C3C"
                            android:textSize="30sp" />

                        <EditText
                            android:id="@+id/queueCount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autoText="true"
                            android:autofillHints=""
                            android:ems="10"
                            android:hint="0"
                            android:inputType="number"
                            android:paddingStart="10dp"
                            android:paddingLeft="10dp"
                            android:paddingTop="10dp"
                            android:paddingEnd="10dp"
                            android:paddingRight="10dp"
                            android:paddingBottom="10dp"
                            android:textAlignment="center"
                            android:textColorHint="#78909C"
                            android:textSize="60sp" />

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/buttonJoin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="42dp"
                            android:layout_marginTop="170dp"
                            android:layout_marginEnd="42dp"
                            android:layout_marginBottom="30dp"
                            android:text="@string/join"
                            android:textColor="@color/red"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>